Add thing example route
