# public/openapi.json
@@ -28,6 +28,154 @@
         },
         "tags": []
       }
+    },
+    "/things": {
+      "post": {
+        "summary": "/things",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "thing": {
+                      "type": "object",
+                      "properties": {
+                        "thing_id": { "type": "string" },
+                        "type": {
+                          "type": "string",
+                          "enum": ["superthing", "lamething"]
+                        },
+                        "status": {
+                          "type": "string",
+                          "enum": ["online", "offline"]
+                        }
+                      },
+                      "required": ["thing_id", "type", "status"]
+                    },
+                    "things": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "thing_id": { "type": "string" },
+                          "type": {
+                            "type": "string",
+                            "enum": ["superthing", "lamething"]
+                          },
+                          "status": {
+                            "type": "string",
+                            "enum": ["online", "offline"]
+                          }
+                        },
+                        "required": ["thing_id", "type", "status"]
+                      }
+                    },
+                    "ok": { "type": "boolean" }
+                  },
+                  "required": ["ok"]
+                }
+              }
+            }
+          },
+          "400": { "description": "Bad Request" },
+          "401": { "description": "Unauthorized" }
+        },
+        "security": [{ "api_key": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "enum": ["superthing", "lamething"]
+                  },
+                  "status": { "type": "string", "enum": ["online", "offline"] }
+                },
+                "required": ["type", "status"]
+              }
+            }
+          }
+        },
+        "tags": []
+      },
+      "get": {
+        "summary": "/things",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "thing": {
+                      "type": "object",
+                      "properties": {
+                        "thing_id": { "type": "string" },
+                        "type": {
+                          "type": "string",
+                          "enum": ["superthing", "lamething"]
+                        },
+                        "status": {
+                          "type": "string",
+                          "enum": ["online", "offline"]
+                        }
+                      },
+                      "required": ["thing_id", "type", "status"]
+                    },
+                    "things": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "thing_id": { "type": "string" },
+                          "type": {
+                            "type": "string",
+                            "enum": ["superthing", "lamething"]
+                          },
+                          "status": {
+                            "type": "string",
+                            "enum": ["online", "offline"]
+                          }
+                        },
+                        "required": ["thing_id", "type", "status"]
+                      }
+                    },
+                    "ok": { "type": "boolean" }
+                  },
+                  "required": ["ok"]
+                }
+              }
+            }
+          },
+          "400": { "description": "Bad Request" },
+          "401": { "description": "Unauthorized" }
+        },
+        "security": [{ "api_key": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "enum": ["superthing", "lamething"]
+                  },
+                  "status": { "type": "string", "enum": ["online", "offline"] }
+                },
+                "required": ["type", "status"]
+              }
+            }
+          }
+        },
+        "tags": []
+      }
     }
   },
   "components": { "securitySchemes": { "api_key": { "type": "apiKey" } } }
